--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,48 +1,71 @@
 version: '3.8'
-
 services:
   app:
     build:
       context: .
-    container_name: app
+      dockerfile: Dockerfile
+    image: product-app-api
+    container_name: product-app-api
+    restart: unless-stopped
+    tty: true
+    environment:
+      SERVICE_NAME: product-app
+      SERVICE_TAGS: dev
+    working_dir: /var/www
+    volumes:
+      - ./:/var/www
+    networks:
+      - laravel
+
+  webserver:
+    image: nginx:alpine
+    container_name: product-api-webserver
+    restart: unless-stopped
+    tty: true
     ports:
-      - "9000:9000"
+      - "8000:80"
     volumes:
-      - .:/var/www
-    depends_on:
-      - db
-    environment:
-      - DB_CONNECTION=mysql
-      - DB_HOST=db
-      - DB_PORT=3306
-      - DB_DATABASE=product-api-test
-      - DB_USERNAME=root
-      - DB_PASSWORD=
-
-  db:
-    image: mysql:8.0
-    container_name: db
-    environment:
-      MYSQL_ROOT_PASSWORD: 
-      MYSQL_DATABASE: product-api-test
-    volumes:
-      - db_data:/var/lib/mysql
-
-  tests:
-    build:
-      context: .
-    container_name: tests
+      - ./:/var/www
+      - ./docker/nginx/:/etc/nginx/conf.d/
+    networks:
+      - laravel
     depends_on:
       - app
-      - db
-    command: ["php", "artisan", "test"]
+
+  db:
+    image: mysql:5.7
+    container_name: product-api-db
+    restart: unless-stopped
+    tty: true
+    ports:
+      - "3306:3306"
     environment:
-      - DB_CONNECTION=mysql
-      - DB_HOST=db
-      - DB_PORT=3306
-      - DB_DATABASE=your_database
-      - DB_USERNAME=root
-      - DB_PASSWORD=your_password
+      MYSQL_DATABASE: ${DB_DATABASE}
+      MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
+      SERVICE_TAGS: dev
+      SERVICE_NAME: mysql
+    volumes:
+      - dbdata:/var/lib/mysql
+    networks:
+      - laravel
+
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    container_name: product-api-phpmyadmin
+    restart: unless-stopped
+    ports:
+      - "8081:80"
+    environment:
+      PMA_HOST: db
+    depends_on:
+      - db
+    networks:
+      - laravel
+
+networks:
+  laravel:
+    driver: bridge
 
 volumes:
-  db_data:
+  dbdata:
+    driver: local
